name:                tellbot
version:             0.2.0.1
synopsis:            IRC tellbot
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable demofrbot
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base         >= 4.5
                     , network      == 2.4.*
                     , errors       == 1.4.*
                     , mtl          == 2.1.*
                     , transformers == 0.3.*
                     , split        == 0.2.*
                     , containers   >= 0.4
                     , bifunctors   == 4.1.*
                     , time         == 1.4.*
  hs-source-dirs:      src
  ghc-options:         -static -O2
  default-language:    Haskell2010
